# ARTIST

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AActuatorModule.py  AKinematicModule.py  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DiffSTRAL - Verknüpfung.lnk  LICENSE.md  NOTICE  NURBS_tutorial.md  README.md  RELEASE.md  SECURITY.md  TESTING.md  bpro_loader.py  build_heliostat_model.py  calibdata.csv  canting.py  codemeta.json  create_sweep_files.py  data.py  datapoint.py  dataset_cache.py  default.nix  defaults.py  disk_cache.py  environment.py  facets.py  flake.nix  hausdorff_distance.py  hdf5_printer.py  heliostat_model.py  heliostat_models.py  heliostat_models_sandbox.py  lock.aarch64-linux.json  losses.py  main.py  (+29 more)
.github/: pull_request_template.md
Code/: AActuatorModule.py  AKinematicModule.py  AlignmentModule.py  NeuralNetworkRigidBodyFusionModule.py  Sun.py  normalization.py  utils.py
HelioFiles/: TestHeliostat.helio
MeasurementData/: other_heliostat_properties.json
Plots/: advanced_plotter.py  loss_plot.py  loss_plot_appendix.py  plot_real_flux_maps.py  surface_plot.py
TestingConfigs/: 600mFunction.yaml  DeepPretrain.yaml  ForNextPaper.yaml  PlottingOnly.yaml  RealPosNew.yaml  RealPosNew_NURBSx15.yaml  TestBasin.yaml
TestingModels/: alignment_model_aj23_desired.json  alignment_model_aj23_gm_target.json  alignment_model_aj23_nn_target.json  alignment_model_aj23_nn_untrained.json  alignment_model_aj23_untrained.json  alignment_model_aj23_untrained_disturbed.json  test_untrained.json
Unittests/: TestAKinematicModule.py  TestALightSource.py  TestDataGeneratorAndLoader.py
WorkingConfigs/: Best10m.yaml  Best10m_full.yaml  RealPosNew.yaml  Real_calibration.yaml  Test.yaml  TestedWithSteffan.yaml  field_opt_focused.yaml  field_opt_squares_first_sun_only_whd.yaml  field_opt_triangle_first_sun_only_whd.yaml  field_opt_triforce_first_sun_only_whd.yaml  load_best_real_pos.yaml  load_old_files_readme.txt  loadx15.yaml  loadx5.yaml  loadx50.yaml
apps/: bin_reader.py
artist/: Runtimetest.py  __init__.py  scenario.py
docs/: artist_structure.rst  artist_under_the_hood.rst  conf.py  coordinates.rst  generating_scenario.rst  heliostat_raytracing.rst  heliostats.rst  index.rst  install.rst  nurbs_tutorial.rst  quickstart.rst  requirements.txt  scenario.rst  tutorial_distributed_raytracing.rst  tutorial_generating_scenario.rst  tutorial_heliostat_raytracing.rst  tutorial_kinematic_calibration.rst  tutorial_kinematic_reconstruction.rst  tutorial_kinematics_reconstruction.rst  tutorial_motor_position_optimization.rst  tutorial_surface_reconstruction.rst  usage.rst
examples/: 00_create_heliostat_list.py  00_generate_heliostat_list.py  01_paint_calibration_example.py  02_paint_raytracing_example.py  config.example.json  config.local.json  helper.py  hyperparameter_search.py  paint_utils.py  set_up.py
hyperparameter_search/: ideal_cp_10.h5  ideal_cp_100.h5  ideal_cp_20.h5  ideal_cp_5.h5  ideal_cp_50.h5  ideal_cp_6.h5  ideal_h_2_cp_10.h5  ideal_h_2_cp_100.h5  ideal_h_2_cp_20.h5  ideal_h_2_cp_5.h5  ideal_h_2_cp_50.h5  ideal_h_2_cp_6.h5  ideal_h_4_cp_10.h5  ideal_h_4_cp_100.h5  ideal_h_4_cp_20.h5  ideal_h_4_cp_5.h5  ideal_h_4_cp_50.h5  ideal_h_4_cp_6.h5
joss_paper/: paper.bib  paper.md
logs/: island_0_ckpt.pickle
measurement_data/: convert_stral_test.py  example_stral_conversion.py  juelich-tower-measurements-item-stac.json  juelich-tower-measurements.json  test_data.h5
results/: hpo_results.json  surface_reconstruction_results.pt  surface_reconstruction_viable_heliostats.json
scenarios/: example_generate_alignment_optimization_ideal_actuators.py  example_generate_alignment_optimization_scenario.py  example_generate_h5_from_paint.py  example_generate_individual_test_scenario.py  example_generate_multiple_heliostat_scenario.py  example_generate_test_scenario.py  example_user_story_alignment_optimization.py  generate_individual_test_scenario.py  generate_multiple_heliostat_scenario.py  generate_parallel_test_scenario.py  generate_test_scenario.py  generate_tutorial_scenario.py  multiple_heliostat_scenario.h5  surface_reconstruction_ideal.h5  test_alignment_optimization.h5  test_alignment_optimization_ideal_actuators.h5  test_alignment_optimization_with_deviations.h5  test_individual_measurements_scenario.h5  test_scenario.h5  test_scenario_paint.h5  tutorial_scenario.h5
scenarios_old/: surface_comparison_deflectometry.h5  surface_reconstruction_ideal.h5
scripts/: distributed_alignemnt_optimization_with_raytracing.py  distributed_multi_heliostat_optimization_and_raytracing.py  distributed_raytracing_with_stral_data.py  utils.py
tests/: conftest.py  test_alignment_optimization.py  test_light_source.py  test_load_surface_stral_data.py  test_new.py  test_user_story_alignment_optimization.py  test_user_story_motor_pos.py
tutorials/: 00_generate_scenario_from_paint.py  00_generate_scenario_from_paint_tutorial.py  00_generate_scenario_from_stral.py  00_generate_scenario_from_stral_tutorial.py  00_generate_scenario_ideal_heliostat.py  01_generate_scenario_heliostat_raytracing.py  01_heliostat_raytracing_distributed_tutorial.py  01_heliostat_raytracing_notebook.ipynb  01_heliostat_raytracing_tutorial.py  01_single_heliostat_raytracing_tutorial.py  02_alignment_optimization_tutorial.py  02_heliostat_raytracing_distributed_tutorial.py  02_kinematic_optimization_tutorial.py  03_alignment_optimization_and_raytracing_tutorial.py  03_learn_nurbs_from_bitmap  03_learn_nurbs_from_bitmap.py  03_multi_heliostat_distributed_raytracing.py  03_nurbs_surface_reconstruction.py  03_nurbs_surface_reconstruction_tutorial.py  03_surface_optimizer.py  04_kinematic_calibration_tutorial.py  04_kinematic_reconstruction_tutorial.py  04_kinematics_reconstruction_tutorial.py  04_motor positions_optimizer.py  04_motor_positions_optimizer.py  05_motor_positions_optimizer.py  05_motor_positions_optimizer_tutorial.py  alignemnt_optimization_with_raytracing_distributed.py  alignment_optimization.py  helper.py  (+10 more)
(+1055 files in other folders)
