# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = artist
version = 0.0.1
description = AI-enhanced Differentiable Ray Tracer for Irradiation Prediction in Solar Tower Digital Twins
author = ARTIST Consortium
author_email = artist@lists.kit.edu
license = "tbd"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
# Change if running only on Windows, Mac or Linux (comma-separated)
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =.


# Add dependencies of your project (semicolon/line-separated):
install_requires =
    matplotlib
    pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@stable

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.8

[options.extras_require]
testing =
    pytest
    pytest-cov
dev =
    pre-commit
    black

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = propulate.module:function
# For example:
# console_scripts =
#     fibonacci = propulate.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
#norecursedirs =
#    dist
#    build
#    .tox
testpaths = artist

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

# Automatically build docs from doc strings.
[build_sphinx]
#source_dir = docs
#build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[semantic_release]
#branch = "release"
#upload_to_pypi = true
#upload_to_release = true
#commit_message = "{version} [skip ci]"

version_variable = "setup.cfg:version"

build_command = "python -m build"